--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,21 +2,8 @@
 
 version: '2'
 services:
-  kafka-zookeeper:
-    image: spotify/kafka
-    ports:
-      - 2181:2181
-      - 9092:9092
-    environment:
-      - AUTO_CREATE_TOPICS=true
-      - ADVERTISED_PORT=9092
-
   journalbeat:
     image: eu.gcr.io/avatao-public/journalbeat:el7
-    depends_on:
-      - kafka-zookeeper
-    links:
-      - kafka-zookeeper
     volumes:
       - /etc/machine-id:/etc/machine-id
       - /var/log/journal:/var/log/journal
@@ -24,13 +11,14 @@ services:
       - ./journalbeat.yml:/etc/journalbeat/journalbeat.yml
       #- /var/run/systemd/journal/socket:/var/run/systemd/journal/socket:z
     environment:
-      - KAFKA_HOST=kafka-zookeeper:9092
+      - LOGSTASH_HOST=logstash:5044
     restart: always
 
   logstash:
-    image: docker.elastic.co/logstash/logstash:5.3.1
+    image: docker.elastic.co/logstash/logstash:5.4.1
+    user: root
     volumes:
-      - ./logstash-conf/:/usr/share/logstash/config
+      #- ./logstash-conf/logstash.yml:/usr/share/logstash/config/logstash.yml
       - ./logstash-pipeline/:/usr/share/logstash/pipeline/
       - ls-local-log:/mnt/logstash
     depends_on:
@@ -38,9 +26,21 @@ services:
     links:
       - journalbeat
     restart: always
-    
+    environment:
+      - XPACK_MONITORING_ENABLED=true
+      - CONFIG_RELOAD_AUTOMATIC=true
+      - QUEUE_TYPE=persisted
+      - QUEUE_MAX_BYTES=1024mb
+      - QUEUE_CHECKPOINT_ACKS=1024
+      - QUEUE_CHECKPOINT_WRITES=1024
+      - QUEUE_CHECKPOINT_INTERVAL=10000
+      - XPACK_MONITORING_ELASTICSEARCH_URL=http://elasticsearch:9200
+      - XPACK_MONITORING_ELASTICSEARCH_USERNAME=elastic
+      - XPACK_MONITORING_ELASTICSEARCH_PASSWORD=changeme
+      - LOG_LEVEL=error
+      
   elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:5.3.1
+    image: docker.elastic.co/elasticsearch/elasticsearch:5.4.1
     cap_add:
       - IPC_LOCK
     mem_limit: 1g
@@ -69,7 +69,7 @@ services:
 
  
   kibana:
-    image: docker.elastic.co/kibana/kibana:5.3.1
+    image: docker.elastic.co/kibana/kibana:5.4.1
     ports:
       - "5601:5601"
     depends_on:
