--- a/journalbeat.yml
+++ b/journalbeat.yml
@@ -14,23 +14,13 @@ journalbeat:
 
 name: journalbeat
 
-output.kafka:
+output.logstash:
   # initial brokers for reading cluster metadata
-  hosts: 
-    - ${KAFKA_HOST}
-  # do not set these by default
-  #username: ${KAFKA_USERNAME:-}
-  #password: ${KAFKA_PASSWORD:-}
-  # message topic selection + partitioning
-  topic: 'journal'
-  #topic: 'journal-%{[journal][syslog_identifier]}'
+  hosts:
+    - ${LOGSTASH_HOST}
+  loadbalance: true
   max_retries: 5
-  required_acks: 1
-  compression: gzip
-  max_message_bytes: 1000000
   worker: 3
-  bulk_max_size: 1024
-
 
 logging.level: info
 logging.to_files: true
